# Pytorch-in-C-

./: CMakeLists.txt  linear_regression.pt  main.cpp  reference.txt
